--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,89 +1,37 @@
 name: Docker
 
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
+  schedule:
+    # min hours day(month) month day(week)
+    - cron: '0 0 7,22 * *'
 
 jobs:
-  build-alpine:
+  Distros:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        distro: [alpine, archlinux, centos, debian, fedora, opensuse, ubuntu]
+      fail-fast: false
+    env:
+      DISTRO: ${{ matrix.distro }}
     steps:
     - uses: actions/checkout@v2
     - name: Build env image
-      run: make --directory=ci env_alpine
+      run: make --directory=ci ${DISTRO}_env
+    - name: Build devel image
+      run: make --directory=ci ${DISTRO}_devel
     - name: Build project
-      run: make --directory=ci devel_alpine
+      run: make --directory=ci ${DISTRO}_build
     - name: Test project
-      run: make --directory=ci test_alpine
-    - name: Test Install project
-      run: make --directory=ci test_install_alpine
-  build-archlinux:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Build env image
-      run: make --directory=ci env_archlinux
-    - name: Build project
-      run: make --directory=ci devel_archlinux
-    - name: Test project
-      run: make --directory=ci test_archlinux
-    - name: Test Install project
-      run: make --directory=ci test_install_archlinux
-  build-centos:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Build env image
-      run: make --directory=ci env_centos
-    - name: Build project
-      run: make --directory=ci devel_centos
-    - name: Test project
-      run: make --directory=ci test_centos
-    - name: Test Install project
-      run: make --directory=ci test_install_centos
-  build-debian:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Build env image
-      run: make --directory=ci env_debian
-    - name: Build project
-      run: make --directory=ci devel_debian
-    - name: Test project
-      run: make --directory=ci test_debian
-    - name: Test Install project
-      run: make --directory=ci test_install_debian
-  build-fedora:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Build env image
-      run: make --directory=ci env_fedora
-    - name: Build project
-      run: make --directory=ci devel_fedora
-    - name: Test project
-      run: make --directory=ci test_fedora
-    - name: Test Install project
-      run: make --directory=ci test_install_fedora
-  build-opensuse:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Build env image
-      run: make --directory=ci env_opensuse
-    - name: Build project
-      run: make --directory=ci devel_opensuse
-    - name: Test project
-      run: make --directory=ci test_opensuse
-    - name: Test Install project
-      run: make --directory=ci test_install_opensuse
-  build-ubuntu:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Build env image
-      run: make --directory=ci env_ubuntu
-    - name: Build project
-      run: make --directory=ci devel_ubuntu
-    - name: Test project
-      run: make --directory=ci test_ubuntu
-    - name: Test Install project
-      run: make --directory=ci test_install_ubuntu
+      run: make --directory=ci ${DISTRO}_test
+
+    - name: Build Install env image
+      run: make --directory=ci ${DISTRO}_install_env
+    - name: Build Install devel image
+      run: make --directory=ci ${DISTRO}_install_devel
+    - name: Build Install
+      run: make --directory=ci ${DISTRO}_install_build
+    - name: Test Install
+      run: make --directory=ci ${DISTRO}_install_test
