--- a/ci/docker/ubuntu/Dockerfile
+++ b/ci/docker/ubuntu/Dockerfile
@@ -9,31 +9,35 @@ RUN apt-get update -q \
 && apt-get clean \
 && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-# Install CMake 3.18.4
-RUN wget "https://cmake.org/files/v3.18/cmake-3.18.4-Linux-x86_64.sh" \
-&& chmod a+x cmake-3.18.4-Linux-x86_64.sh \
-&& ./cmake-3.18.4-Linux-x86_64.sh --prefix=/usr/local/ --skip-license \
-&& rm cmake-3.18.4-Linux-x86_64.sh
-CMD [ "/bin/sh" ]
+# Install CMake 3.19.2
+RUN wget "https://cmake.org/files/v3.19/cmake-3.19.2-Linux-x86_64.sh" \
+&& chmod a+x cmake-3.19.2-Linux-x86_64.sh \
+&& ./cmake-3.19.2-Linux-x86_64.sh --prefix=/usr/local/ --skip-license \
+&& rm cmake-3.19.2-Linux-x86_64.sh
 
 FROM env AS devel
 WORKDIR /home/project
 COPY . .
 
-RUN cmake -version
+FROM devel AS build
 RUN cmake -S. -Bbuild
 RUN cmake --build build --target all -v
 RUN cmake --build build --target install -v
 
-FROM devel AS test
+FROM build AS test
 RUN cmake --build build --target test
 
-FROM env AS install
-COPY --from=devel /usr/local /usr/local/
+# Test install rules
+FROM env AS install_env
+COPY --from=build /usr/local /usr/local/
 
+FROM install_env AS install_devel
 WORKDIR /home/sample
 COPY ci/sample .
 
+FROM install_devel AS install_build
 RUN cmake -S. -Bbuild
 RUN cmake --build build --target all -v
+
+FROM install_build AS install_test
 RUN cmake --build build --target test
