--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -20,7 +20,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build env image
       run: make --directory=ci ${DISTRO}_env
-    - name: Build devel image
+    - name: Build devel project
       run: make --directory=ci ${DISTRO}_devel
     - name: Build project
       run: make --directory=ci ${DISTRO}_build
