--- a/ci/docker/centos/Dockerfile
+++ b/ci/docker/centos/Dockerfile
@@ -4,13 +4,17 @@ FROM centos:latest AS env
 LABEL maintainer="mizux.dev@gmail.com"
 # Install system build dependencies
 ENV PATH=/usr/local/bin:$PATH
-RUN yum -y update \
-&& yum -y groupinstall "Development Tools" \
-&& yum -y install epel-release \
-&& yum -y install cmake3 \
-&& ln -s /usr/bin/cmake3 /usr/local/bin/cmake \
-&& yum clean all \
-&& rm -rf /var/cache/yum
+RUN dnf -y update \
+&& dnf -y install git wget openssl-devel \
+&& dnf -y groupinstall "Development Tools" \
+&& dnf clean all \
+&& rm -rf /var/cache/dnf
+
+# Install CMake 3.19.2
+RUN wget "https://cmake.org/files/v3.19/cmake-3.19.2-Linux-x86_64.sh" \
+&& chmod a+x cmake-3.19.2-Linux-x86_64.sh \
+&& ./cmake-3.19.2-Linux-x86_64.sh --prefix=/usr/local/ --skip-license \
+&& rm cmake-3.19.2-Linux-x86_64.sh
 
 # Add the library src to our build env
 FROM env AS devel
@@ -18,6 +22,7 @@ WORKDIR /home/project
 COPY . .
 
 FROM devel AS build
+RUN cmake -version
 RUN cmake -S. -Bbuild
 RUN cmake --build build --target all -v
 RUN cmake --build build --target install -v
