--- a/ci/docker/archlinux/Dockerfile
+++ b/ci/docker/archlinux/Dockerfile
@@ -12,6 +12,7 @@ WORKDIR /home/project
 COPY . .
 
 FROM devel AS build
+RUN cmake -version
 RUN cmake -S. -Bbuild
 RUN cmake --build build --target all -v
 RUN cmake --build build --target install -v
