--- a/ci/docker/debian/Dockerfile
+++ b/ci/docker/debian/Dockerfile
@@ -4,10 +4,16 @@ FROM debian:latest AS env
 LABEL maintainer="mizux.dev@gmail.com"
 # Install system build dependencies
 ENV PATH=/usr/local/bin:$PATH
-RUN apt-get update -q && \
-apt-get install -yq git build-essential cmake && \
-apt-get clean && \
-rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+RUN apt-get update -qq \
+&& apt-get install -yq git wget libssl-dev build-essential \
+&& apt-get clean \
+&& rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
+# Install CMake 3.19.2
+RUN wget "https://cmake.org/files/v3.19/cmake-3.19.2-Linux-x86_64.sh" \
+&& chmod a+x cmake-3.19.2-Linux-x86_64.sh \
+&& ./cmake-3.19.2-Linux-x86_64.sh --prefix=/usr/local/ --skip-license \
+&& rm cmake-3.19.2-Linux-x86_64.sh
 
 # Add the library src to our build env
 FROM env AS devel
@@ -15,6 +21,7 @@ WORKDIR /home/project
 COPY . .
 
 FROM devel AS build
+RUN cmake -version
 RUN cmake -S. -Bbuild
 RUN cmake --build build --target all -v
 RUN cmake --build build --target install -v
