--- a/ci/Makefile
+++ b/ci/Makefile
@@ -17,11 +17,22 @@ help:
 	@echo -e "${BOLD}MAKE TARGETS${RESET}"
 	@echo -e "\t${BOLD}help${RESET}: display this help and exit."
 	@echo
-	@echo -e "\t${BOLD}<stage>${RESET}: build <stage> docker images for ALL DISTROS."
-	@echo -e "\t${BOLD}<distro>_<stage>${RESET}: build <stage> docker image for a specific distro."
-	@echo -e "\t${BOLD}save_<stage>${RESET}: Save <stage> docker images for ALL DISTROS."
-	@echo -e "\t${BOLD}save_<distro>_<stage>${RESET}: Save the <stage> docker image for a specific distro."
+	@echo -e "\tBuild using docker and the host platform."
+	@echo -e "\t${BOLD}<distro>_<stage>${RESET}: build a <stage> docker image for a specific distro."
+	@echo -e "\t${BOLD}save_<distro>_<stage>${RESET}: Save a <stage> docker image for a specific distro."
 	@echo -e "\t${BOLD}sh_<distro>_<stage>${RESET}: run a container using the <stage> docker image specified (debug purpose)."
+	@echo -e "\t${BOLD}clean_<distro>_<stage>${RESET}: Remove cache and docker image."
+	@echo -e "\t${BOLD}clean_native${RESET}: Remove ALL caches and docker images."
+	@echo
+	@echo -e "\tWith ${BOLD}<distro>${RESET}:"
+	@echo -e "\t\t${BOLD}alpine${RESET} (edge)"
+	@echo -e "\t\t${BOLD}archlinux${RESET} (latest)"
+	@echo -e "\t\t${BOLD}centos${RESET} (latest)"
+	@echo -e "\t\t${BOLD}debian${RESET} (latest)"
+	@echo -e "\t\t${BOLD}fedora${RESET} (latest)"
+	@echo -e "\t\t${BOLD}opensuse${RESET} (tumbleweed)"
+	@echo -e "\t\t${BOLD}ubuntu${RESET} (rolling)"
+	@echo -e "\t\t${BOLD}all${RESET} trigger ALL DISTROS."
 	@echo
 	@echo -e "\tWith ${BOLD}<stage>${RESET}:"
 	@echo -e "\t\t${BOLD}env${RESET}"
@@ -32,20 +43,35 @@ help:
 	@echo -e "\t\t${BOLD}install_devel${RESET}"
 	@echo -e "\t\t${BOLD}install_build${RESET}"
 	@echo -e "\t\t${BOLD}install_test${RESET}"
-	@echo -e "\te.g. 'make build'"
-	@echo
-	@echo -e "\tWith ${BOLD}<distro>${RESET}:"
-	@echo -e "\t\t${BOLD}alpine${RESET} (edge)"
-	@echo -e "\t\t${BOLD}archlinux${RESET} (latest)"
-	@echo -e "\t\t${BOLD}centos${RESET} (latest)"
-	@echo -e "\t\t${BOLD}debian${RESET} (latest)"
-	@echo -e "\t\t${BOLD}fedora${RESET} (latest)"
-	@echo -e "\t\t${BOLD}opensuse${RESET} (tumbleweed)"
-	@echo -e "\t\t${BOLD}ubuntu${RESET} (rolling)"
 	@echo -e "\te.g. 'make ubuntu_test'"
 	@echo
-	@echo -e "\t${BOLD}clean${RESET}: Remove cache and ALL docker images."
-	@echo -e "\t${BOLD}clean_<distro>${RESET}: Remove cache and docker images for the specified distro."
+	@echo -e "\tBuild using docker buildx with a platform specified."
+	@echo -e "\t${BOLD}<platform>_<stage>${RESET}: build <stage> docker images for ALL DISTROS."
+	@echo -e "\t${BOLD}<platform>_<distro>_<stage>${RESET}: build <stage> docker image for a specific distro."
+	@echo -e "\t${BOLD}save_<platform>_<stage>${RESET}: Save <stage> docker images for ALL DISTROS."
+	@echo -e "\t${BOLD}save_<platform>_<distro>_<stage>${RESET}: Save the <stage> docker image for a specific distro."
+	@echo -e "\t${BOLD}sh_<platform>_<distro>_<stage>${RESET}: run a container using the <stage> docker image specified (debug purpose)."
+	@echo -e "\t${BOLD}clean_<platform>_<distro>_<stage>${RESET}: Remove cache and docker image."
+	@echo -e "\t${BOLD}clean_platforms${RESET}: Remove ALL cache and docker image."
+	@echo
+	@echo -e "\tWith ${BOLD}<platform>${RESET}:"
+	@echo -e "\t\t${BOLD}amd64${RESET}: linux/amd64 (x86_64)"
+	@echo -e "\t\t${BOLD}386${RESET}: linux/386 (x86)"
+	@echo -e "\t\t${BOLD}arm${RESET}: linux/arm (armv7)"
+	@echo -e "\t\t${BOLD}arm64${RESET}: linux/arm64 (aarch64, arm64v8)"
+	@echo -e "\t\t${BOLD}mips${RESET}: linux/mips (mips 32bits)"
+	@echo -e "\t\t${BOLD}mipsle${RESET}: linux/mipsle (mips 32bits Little Endian)"
+	@echo -e "\t\t${BOLD}mips64${RESET}: linux/mips64 (mips 64bits)"
+	@echo -e "\t\t${BOLD}mips64le${RESET}: linux/mips64le (mips 64bits Little Endian)"
+	@echo -e "\t\t${BOLD}ppc64${RESET}: linux/ppc64 (PowerPC 64Bits)"
+	@echo -e "\t\t${BOLD}ppc64le${RESET}: linux/ppc64le (PowerPC 64Bits Little Endian)"
+	@echo -e "\t\t${BOLD}riscv64${RESET}: linux/riscv64 (RISC-V 64bits)"
+	@echo -e "\te.g. 'make amd64_ubuntu_test'"
+	@echo -e "\tDocker image unavailable: arm64_archlinux"
+	@echo
+	@echo -e "\tGlobal targets."
+	@echo -e "\t${BOLD}clean${RESET}: Remove ALL caches and docker images."
+	@echo -e "\t${BOLD}distclean${RESET}: Remove everything."
 	@echo
 	@echo -e "\t${BOLD}NOCACHE=1${RESET}: use 'docker build --no-cache' when building container (default use cache)."
 	@echo
@@ -71,10 +97,11 @@ IMAGE := ${PROJECT}
 
 ifdef NOCACHE
 DOCKER_BUILD_CMD := docker build --no-cache
+DOCKER_BUILDX_CMD := docker buildx build --no-cache
 else
 DOCKER_BUILD_CMD := docker build
+DOCKER_BUILDX_CMD := docker buildx build
 endif
-
 DOCKER_RUN_CMD := docker run --rm --init --net=host
 
 # Currently supported distro
@@ -90,18 +117,18 @@ DISTROS = alpine archlinux centos debian fedora opensuse ubuntu
 STAGES = env devel build test install_env install_devel install_build install_test
 define make-stage-target =
 #$$(info STAGE: $1)
-#$$(info Create targets: $1 $(addsuffix _$1, $(DISTROS)).)
+#$$(info Create targets: all_$1 $(addsuffix _$1, $(DISTROS)).)
 targets_$1 = $(addsuffix _$1, $(DISTROS))
-.PHONY: $1 $$(targets_$1)
-$1: $$(targets_$1)
+.PHONY: all_$1 $$(targets_$1)
+all_$1: $$(targets_$1)
 $$(targets_$1): %_$1: docker/%/Dockerfile
 	#@docker image rm -f ${IMAGE}:$$*_$1 2>/dev/null
 	${DOCKER_BUILD_CMD} --target=$1 --tag ${IMAGE}:$$*_$1 -f $$< ..
 
-#$$(info Create targets: save_$1 $(addprefix save_, $(addsuffix _$1, $(DISTROS))) (debug).)
+#$$(info Create targets: save_all_$1 $(addprefix save_, $(addsuffix _$1, $(DISTROS))) (debug).)
 save_targets_$1 = $(addprefix save_, $(addsuffix _$1, $(DISTROS)))
-.PHONY: save_$1 $$(save_targets_$1)
-save_$1: $$(save_targets_$1)
+.PHONY: save_all_$1 $$(save_targets_$1)
+save_all_$1: $$(save_targets_$1)
 $$(save_targets_$1): save_%_$1: cache/%/docker_$1.tar
 cache/%/docker_$1.tar: %_$1
 	@rm -f $$@
@@ -114,10 +141,10 @@ sh_targets_$1 = $(addprefix sh_, $(addsuffix _$1, $(DISTROS)))
 $$(sh_targets_$1): sh_%_$1: %_$1
 	${DOCKER_RUN_CMD} -it --name ${IMAGE}_$$*_$1 ${IMAGE}:$$*_$1
 
-#$$(info Create targets: $(addprefix clean_, $(addsuffix _$1, $(DISTROS))).)
+#$$(info Create targets: clean_all_$1 $(addprefix clean_, $(addsuffix _$1, $(DISTROS))).)
 clean_targets_$1 = $(addprefix clean_, $(addsuffix _$1, $(DISTROS)))
-.PHONY: clean_$1 $$(clean_targets_$1)
-clean_$1: $$(clean_targets_$1)
+.PHONY: clean_all_$1 $$(clean_targets_$1)
+clean_all_$1: $$(clean_targets_$1)
 $$(clean_targets_$1): clean_%_$1:
 	docker image rm -f ${IMAGE}:$$*_$1 2>/dev/null
 	rm -f cache/$$*/docker_$1.tar
@@ -125,15 +152,84 @@ endef
 
 $(foreach stage,$(STAGES),$(eval $(call make-stage-target,$(stage))))
 
+## MERGE ##
+.PHONY: clean_all
+clean_all: $(addprefix clean_all_, $(STAGES))
+	rm -f $(addprefix cache/, $(DISTROS))
+
+##############
+## PLATFORM ##
+##############
+# ref: https://go.dev/doc/install/source#environment
+# ref: https://github.com/containerd/containerd/blob/269548fa27e0089a8b8278fc4fc781d7f65a939b/platforms/platforms.go#L80-L94
+PLATFORMS = \
+ 386 amd64 \
+ arm arm64 \
+ mips mipsle mips64 mips64le \
+ ppc64 ppc64le \
+ riscv64
+
+define make-platform-stage-target =
+#$$(info PLATFORM: $1)
+#$$(info STAGE: $2)
+#$$(info Create targets: $1_all_$2 $(addprefix $1_, $(addsuffix _$2, $(DISTROS))).)
+targets_$1_$2 = $(addprefix $1_, $(addsuffix _$2, $(DISTROS)))
+.PHONY: $1_all_$2 $$(targets_$1_$2)
+$1_all_$2: $$(targets_$1_$2)
+$$(targets_$1_$2): $1_%_$2: docker/%/Dockerfile
+	#@docker image rm -f ${IMAGE}:$1_$$*_$2 2>/dev/null
+	${DOCKER_BUILDX_CMD} --platform linux/$1 --target=$2 --tag ${IMAGE}:$1_$$*_$2 -f $$< ..
+
+#$$(info Create targets: save_$1_all_$2 $(addprefix save_$1_, $(addsuffix _$2, $(DISTROS))) (debug).)
+save_targets_$1_$2 = $(addprefix save_$1_, $(addsuffix _$2, $(DISTROS)))
+.PHONY: save_$1_all_$2 $$(save_targets_$1_$2)
+save_$1_all_$2: $$(save_targets_$1_$2)
+$$(save_targets_$1_$2): save_$1_%_$2: cache/$1/%/docker_$2.tar
+cache/$1/%/docker_$2.tar: $1_%_$2
+	@rm -f $$@
+	mkdir -p cache/$1/$$*
+	docker save ${IMAGE}:$1_$$*_$2 -o $$@
+
+#$$(info Create targets: $(addprefix sh_$1_, $(addsuffix _$2, $(DISTROS))) (debug).)
+sh_targets_$1_$2 = $(addprefix sh_$1_, $(addsuffix _$2, $(DISTROS)))
+.PHONY: $$(sh_targets_$1_$2)
+$$(sh_targets_$1_$2): sh_$1_%_$2: $1_%_$2
+	${DOCKER_RUN_CMD} --platform linux/$1 -it --name ${IMAGE}_$1_$$*_$2 ${IMAGE}:$1_$$*_$2
+
+#$$(info Create targets: clean_$1_all_$2 $(addprefix clean_$1_, $(addsuffix _$2, $(DISTROS))).)
+clean_targets_$1_$2 = $(addprefix clean_$1_, $(addsuffix _$2, $(DISTROS)))
+.PHONY: clean_$1_all_$2 $$(clean_targets_$1_$2)
+clean_$1_all_$2: $$(clean_targets_$1_$2)
+$$(clean_targets_$1_$2): clean_$1_%_$2:
+	docker image rm -f ${IMAGE}:$1_$$*_$2 2>/dev/null
+	rm -f cache/$1/$$*/docker_$2.tar
+endef
+
+define make-platform-target =
+#$$(info PLATFORM: $1)
+$(foreach stage,$(STAGES),$(eval $(call make-platform-stage-target,$1,$(stage))))
+
+# merge
+.PHONY: clean_$1
+clean_$1: $(addprefix clean_$1_all_, $(STAGES))
+	-rmdir $(addprefix cache/$1/, $(DISTROS))
+	-rmdir cache/$1
+endef
+
+$(foreach platform,$(PLATFORMS),$(eval $(call make-platform-target,$(platform))))
+
+## MERGE ##
+.PHONY: clean_platforms
+clean_platforms: $(addprefix clean_, $(PLATFORMS))
+
+###########
 ## CLEAN ##
-clean_targets = $(addprefix clean_, $(DISTROS))
-.PHONY: clean $(clean_targets)
-clean: $(clean_targets)
+###########
+.PHONY: clean
+clean: clean_all clean_platforms
 	docker container prune -f
 	docker image prune -f
 	-rmdir cache
-$(clean_targets): clean_%: $(addprefix clean_%_, $(STAGES))
-	-rmdir cache/$*
 
 .PHONY: distclean
 distclean: clean
