--- a/.dockerignore
+++ b/.dockerignore
@@ -1,20 +1,29 @@
 # Project Files unneeded by docker
-ci/cache
-ci/docker
+.dockerignore
+
 .git
 .gitignore
 .github
-.dockerignore
 .clang-format
-.appveyor.yml
-.travis.yml
+
+# CMake
+cmake/docs
+cmake/README.md
+
+ci/docker
+ci/docs
+ci/cache
+ci/Makefile
+
 AUTHORS
-CONTRIBUTING.md
 CONTRIBUTORS
 LICENSE
 README.md
+CONTRIBUTING.md
 
+# Native cmake build
 build/
+build*/
 
 # Editor directories and files
 *.user
