--- a/ci/docker/rockylinux/Dockerfile
+++ b/ci/docker/rockylinux/Dockerfile
@@ -1,20 +1,15 @@
 # Create a virtual environment with all tools installed
-# ref: https://quay.io/repository/centos/centos
-FROM quay.io/centos/centos:stream AS env
+# ref: https://hub.docker.com/_/rockylinux
+FROM rockylinux:9 AS env
 
 # Install system build dependencies
 ENV PATH=/usr/local/bin:$PATH
 RUN dnf -y update \
-&& dnf -y install git wget openssl-devel \
+&& dnf -y install git wget openssl-devel cmake \
 && dnf -y groupinstall "Development Tools" \
 && dnf clean all \
 && rm -rf /var/cache/dnf
-
-# Install CMake 3.19.2
-RUN wget "https://cmake.org/files/v3.19/cmake-3.19.2-Linux-x86_64.sh" \
-&& chmod a+x cmake-3.19.2-Linux-x86_64.sh \
-&& ./cmake-3.19.2-Linux-x86_64.sh --prefix=/usr/local/ --skip-license \
-&& rm cmake-3.19.2-Linux-x86_64.sh
+CMD [ "/usr/bin/bash" ]
 
 # Add the library src to our build env
 FROM env AS devel
@@ -22,25 +17,25 @@ WORKDIR /home/project
 COPY . .
 
 FROM devel AS build
-RUN cmake -version
+RUN cmake --version
 RUN cmake -S. -Bbuild -DCMAKE_BUILD_TYPE=Release
 RUN cmake --build build --target all -v
 RUN cmake --build build --target install -v
 
 FROM build AS test
-RUN cmake --build build --target test -v
+RUN CTEST_OUTPUT_ON_FAILURE=1 cmake --build build --target test -v
 
 # Test install rules
 FROM env AS install_env
 COPY --from=build /usr/local /usr/local/
 
 FROM install_env AS install_devel
-WORKDIR /home/sample
-COPY ci/sample .
+WORKDIR /home/samples
+COPY ci/samples .
 
 FROM install_devel AS install_build
 RUN cmake -S. -Bbuild
 RUN cmake --build build --target all -v
 
 FROM install_build AS install_test
-RUN cmake --build build --target test
+RUN CTEST_OUTPUT_ON_FAILURE=1 cmake --build build --target test -v
