--- a/ci/samples/CMakeLists.txt
+++ b/ci/samples/CMakeLists.txt
@@ -1,13 +1,13 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.16)
 project(Sample VERSION 1.0.0 LANGUAGES CXX)
 
 include(CTest)
-find_package(CMakeExternal REQUIRED)
+find_package(CMakeExternal CONFIG REQUIRED)
 
 add_executable(sample main.cpp)
-#target_compile_features(sample PUBLIC cxx_std_11)
+target_compile_features(sample PUBLIC cxx_std_17)
 set_target_properties(sample PROPERTIES
-  CXX_STANDARD 11
+  CXX_STANDARD 17
   CXX_STANDARD_REQUIRED ON
   VERSION ${PROJECT_VERSION})
 target_link_libraries(sample PRIVATE CMakeExternal::Foo)
