--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
-*.tar
-*.swp
-.vs/
 build/
+build*/
+export/
 cache/
+
+.vagrant/
+
+# IDE
+.vs/
+.cache/
+# Kdevelop
+.kdev4/
+*.kdev4
+# vim
+compile_commands.json
+*.swp
+*.user
