--- a/cmake/CMakeExternalConfig.cmake.in
+++ b/cmake/CMakeExternalConfig.cmake.in
@@ -2,8 +2,7 @@
 
 include(CMakeFindDependencyMacro)
 find_dependency(ZLIB REQUIRED NO_MODULE)
-find_dependency(gflags REQUIRED NO_MODULE)
-find_dependency(glog REQUIRED NO_MODULE)
+find_dependency(absl REQUIRED NO_MODULE)
 find_dependency(Protobuf REQUIRED NO_MODULE)
 
 include("${CMAKE_CURRENT_LIST_DIR}/CMakeExternalTargets.cmake")
