make Foo and Bar regular libraries (not OBJECT)

--- a/Foo/CMakeLists.txt
+++ b/Foo/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(Foo OBJECT)
+add_library(Foo)
 target_sources(Foo
   PRIVATE
     include/foo/Foo.hpp
@@ -18,7 +18,11 @@ add_library(${PROJECT_NAMESPACE}::Foo ALIAS Foo)
 add_subdirectory(tests)
 
 # Install
+include(GNUInstallDirs)
 install(TARGETS Foo
   EXPORT ${PROJECT_NAME}Targets
   PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/foo
-  )
+  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  #RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+)
