--- a/.github/workflows/riscv64_docker_cmake.yml
+++ b/.github/workflows/riscv64_docker_cmake.yml
@@ -1,7 +1,11 @@
 # ref: https://github.com/docker-library/official-images
-name: riscv64 Docker
+name: riscv64 Docker CMake
 
 on: [push, pull_request, workflow_dispatch]
+
+concurrency:
+  group: ${{github.workflow}}-${{github.ref}}
+  cancel-in-progress: true
 
 jobs:
   docker:
@@ -17,7 +21,7 @@ jobs:
           #ubuntu,
         ]
       fail-fast: false
-    name: riscv64 • ${{ matrix.distro }}
+    name: riscv64•${{matrix.distro}}
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -28,19 +32,19 @@ jobs:
         docker info
         docker buildx ls
     - name: Build env image
-      run: make --directory=ci riscv64_${{ matrix.distro }}_env
+      run: make --directory=ci riscv64_${{matrix.distro}}_env
     - name: Build devel project
-      run: make --directory=ci riscv64_${{ matrix.distro }}_devel
+      run: make --directory=ci riscv64_${{matrix.distro}}_devel
     - name: Build project
-      run: make --directory=ci riscv64_${{ matrix.distro }}_build
+      run: make --directory=ci riscv64_${{matrix.distro}}_build
     - name: Test project
-      run: make --directory=ci riscv64_${{ matrix.distro }}_test
+      run: make --directory=ci riscv64_${{matrix.distro}}_test
 
     - name: Build install env image
-      run: make --directory=ci riscv64_${{ matrix.distro }}_install_env
+      run: make --directory=ci riscv64_${{matrix.distro}}_install_env
     - name: Build install devel project
-      run: make --directory=ci riscv64_${{ matrix.distro }}_install_devel
+      run: make --directory=ci riscv64_${{matrix.distro}}_install_devel
     - name: Build install project
-      run: make --directory=ci riscv64_${{ matrix.distro }}_install_build
+      run: make --directory=ci riscv64_${{matrix.distro}}_install_build
     - name: Test install project
-      run: make --directory=ci riscv64_${{ matrix.distro }}_install_test
+      run: make --directory=ci riscv64_${{matrix.distro}}_install_test
