--- a/.github/workflows/riscv64_docker_cmake.yml
+++ b/.github/workflows/riscv64_docker_cmake.yml
@@ -21,7 +21,7 @@ jobs:
           #ubuntu,
         ]
       fail-fast: false
-    name: riscv64•${{matrix.distro}}
+    name: riscv64•${{matrix.distro}}•CMake
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
