--- a/cmake/dependencies/CMakeLists.txt
+++ b/cmake/dependencies/CMakeLists.txt
@@ -12,13 +12,14 @@ set(CMAKE_Fortran_COMPILER OFF)
 if(BUILD_ZLIB)
   message(CHECK_START "Fetching ZLIB")
   list(APPEND CMAKE_MESSAGE_INDENT "  ")
-  set(ZLIB_BUILD_EXAMPLES OFF)
   FetchContent_Declare(
     ZLIB
     GIT_REPOSITORY "https://github.com/madler/ZLIB.git"
     GIT_TAG "v1.3.1"
+    GIT_SHALLOW TRUE
     PATCH_COMMAND git apply --ignore-whitespace
     "${CMAKE_CURRENT_LIST_DIR}/../../patches/ZLIB-v1.3.1.patch")
+  set(ZLIB_BUILD_EXAMPLES OFF)
   FetchContent_MakeAvailable(ZLIB)
   list(POP_BACK CMAKE_MESSAGE_INDENT)
   message(CHECK_PASS "fetched")
@@ -30,13 +31,6 @@ endif()
 if(BUILD_absl)
   message(CHECK_START "Fetching Abseil-cpp")
   list(APPEND CMAKE_MESSAGE_INDENT "  ")
-  set(ABSL_USE_SYSTEM_INCLUDES ON)
-  # We want Abseil to declare what C++ standard it was compiled with.
-  set(ABSL_PROPAGATE_CXX_STD ON)
-  # We want Abseil to keep the INSTALL rules enabled, even though it is a
-  # subproject. Otherwise the install rules in this project break.
-  set(ABSL_ENABLE_INSTALL ON)
-  set(ABSL_BUILD_TESTING OFF)
   FetchContent_Declare(
     absl
     GIT_REPOSITORY "https://github.com/abseil/abseil-cpp.git"
@@ -45,6 +39,13 @@ if(BUILD_absl)
     PATCH_COMMAND git apply --ignore-whitespace
     "${CMAKE_CURRENT_LIST_DIR}/../../patches/abseil-cpp-20240722.0.patch"
     OVERRIDE_FIND_PACKAGE)
+  set(ABSL_USE_SYSTEM_INCLUDES ON)
+  # We want Abseil to declare what C++ standard it was compiled with.
+  set(ABSL_PROPAGATE_CXX_STD ON)
+  # We want Abseil to keep the INSTALL rules enabled, even though it is a
+  # subproject. Otherwise the install rules in this project break.
+  set(ABSL_ENABLE_INSTALL ON)
+  set(ABSL_BUILD_TESTING OFF)
   FetchContent_MakeAvailable(absl)
   list(POP_BACK CMAKE_MESSAGE_INDENT)
   message(CHECK_PASS "fetched")
@@ -56,11 +57,6 @@ endif()
 if(BUILD_Protobuf)
   message(CHECK_START "Fetching Protobuf")
   list(APPEND CMAKE_MESSAGE_INDENT "  ")
-  set(protobuf_BUILD_TESTS OFF)
-  set(protobuf_BUILD_SHARED_LIBS ON)
-  set(protobuf_BUILD_EXPORT OFF)
-  set(protobuf_MSVC_STATIC_RUNTIME OFF)
-  #set(protobuf_BUILD_LIBUPB ON)
   FetchContent_Declare(
     Protobuf
     GIT_REPOSITORY "https://github.com/protocolbuffers/protobuf.git"
@@ -69,6 +65,11 @@ if(BUILD_Protobuf)
     GIT_SUBMODULES ""
     PATCH_COMMAND git apply --ignore-whitespace "${CMAKE_CURRENT_LIST_DIR}/../../patches/protobuf-v29.3.patch"
   )
+  set(protobuf_BUILD_TESTS OFF)
+  set(protobuf_BUILD_SHARED_LIBS ON)
+  set(protobuf_BUILD_EXPORT OFF)
+  set(protobuf_MSVC_STATIC_RUNTIME OFF)
+  #set(protobuf_BUILD_LIBUPB ON)
   FetchContent_MakeAvailable(Protobuf)
   list(POP_BACK CMAKE_MESSAGE_INDENT)
   message(CHECK_PASS "fetched")
@@ -80,7 +81,6 @@ endif()
 if(BUILD_re2)
   message(CHECK_START "Fetching re2")
   list(APPEND CMAKE_MESSAGE_INDENT "  ")
-  set(RE2_BUILD_TESTING OFF)
   FetchContent_Declare(
     re2
     GIT_REPOSITORY "https://github.com/google/re2.git"
@@ -88,6 +88,7 @@ if(BUILD_re2)
     GIT_SHALLOW TRUE
     PATCH_COMMAND git apply --ignore-whitespace "${CMAKE_CURRENT_LIST_DIR}/../../patches/re2-2024-04-01.patch"
   )
+  set(RE2_BUILD_TESTING OFF)
   FetchContent_MakeAvailable(re2)
   list(POP_BACK CMAKE_MESSAGE_INDENT)
   message(CHECK_PASS "fetched")
