--- a/.github/workflows/amd64_linux_cmake.yml
+++ b/.github/workflows/amd64_linux_cmake.yml
@@ -53,7 +53,10 @@ jobs:
       - name: Cache CCache
         uses: actions/cache@v4
         with:
-          key: ${{env.ccache_key}}
+          key: ${{env.ccache_key}}-${{github.job}
+          restore-keys: |
+            ${{env.ccache_key}}-${{github.job}}
+            ${{env.ccache_key}}
           path: ${{env.CCACHE_DIR}}
 
       - name: Check CMake
